# blimgui

./: .gitignore  make_zip.py  readme.md  ruff.toml
blimgui/: __init__.py  pyproject.toml
blimgui/backends/: __init__.py  backend.py  hook_based.py  threaded.py
blimgui/dist32/PyOpenGL-3.1.7.dist-info/: RECORD
blimgui/dist32/glfw-2.8.0.dist-info/: RECORD
blimgui/dist32/imgui_bundle-1.6.2.dist-info/: RECORD  direct_url.json
blimgui/dist32/imgui_bundle/imgui/: __init__.pyi  internal.pyi
blimgui/dist32/munch-4.0.0.dist-info/: RECORD
blimgui/dist32/numpy-2.2.1.dist-info/: RECORD
blimgui/dist32/numpy/_core/: _multiarray_tests.cp313-win32.lib  _multiarray_umath.cp313-win32.lib  _operand_flag_tests.cp313-win32.lib  _rational_tests.cp313-win32.lib  _simd.cp313-win32.lib  _struct_ufunc_tests.cp313-win32.lib  _umath_tests.cp313-win32.lib
blimgui/dist32/numpy/fft/: _pocketfft_umath.cp313-win32.lib
blimgui/dist32/pillow-11.1.0.dist-info/: RECORD
blimgui/dist32/pydantic_core-2.27.2.dist-info/: RECORD
blimgui/dist32/pyglet-2.0.20.dist-info/: RECORD
blimgui/dist32/pyglet/gl/: win32.py
blimgui/dist64/glfw-2.9.0.dist-info/: RECORD
blimgui/dist64/imgui_bundle-1.6.2.dist-info/: METADATA  RECORD  direct_url.json
blimgui/dist64/numpy-2.2.5.dist-info/: RECORD
blimgui/themes/: GruvBoxDark.txt  Nurple.txt  binks.txt  bl2.txt  cinder.txt  enemymouse.txt  halloween.txt  high_contast_red.txt  high_contrast_blue.txt  jaguar.txt  marshmallow.txt  neon.txt  ocean.txt  og_xbox.txt  solar_dark.txt  solar_light.txt  spectrum.txt  synthmaster.txt  teletext.txt  ubuntu.txt
(+28 files in other folders)
